<?xml version="1.0"?>
<package format="2">
  <name>new_planners</name>
  <version>0.0.0</version>
  <description>The new_planners package</description>

  <maintainer email="werner@todo.todo">werner</maintainer>

  <license>D</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>moveit</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>rviz_visual_tools</depend>
<!--  <depend>moveit_visual_tools</depend>-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
